Change JNI header file generation to use javac instead of the removed javah (requires ant 1.9.8+)

--- a/platform_build/windows_ant/build.xml
+++ b/platform_build/windows_ant/build.xml
@@ -11,6 +11,7 @@
 			<arg value="/I${sdkhome}\include"/>
 			<arg value="/I${java.home}\..\include"/>
 			<arg value="/I${java.home}\..\include\win32"/>
+			<arg value="/I${native}"/>
 			<arg value="/I${native}\common"/>
 			<arg value="/I${native}\common\opengl"/>
 			<arg value="/I${native}\windows"/>
