--- a/platform_build/linux_ant/build.xml
+++ b/platform_build/linux_ant/build.xml
@@ -69,6 +69,7 @@
 			<arg value="-I${java.home}/../include"/>
 			<arg value="-I${java.home}/../include/linux"/>
 			<arg value="-I${java.home}/../include/solaris"/>
+			<arg value="-I${native}"/>
 			<arg value="-I${native}/common"/>
 		    <arg value="-I${native}/common/opengl"/>
 			<arg value="-I${native}/linux"/>
@@ -101,6 +102,7 @@
 			<arg value="-I${java.home}/../include"/>
 			<arg value="-I${java.home}/../include/linux"/>
 			<arg value="-I${java.home}/../include/solaris"/>
+			<arg value="-I${native}"/>
 			<arg value="-I${native}/common"/>
 		    <arg value="-I${native}/common/opengl"/>
 			<arg value="-I${native}/linux"/>
