--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -30,7 +30,7 @@ jobs:
           arch: ${{ matrix.arch }}
     - if: matrix.os == 'windows-latest'
       name: Build natives
-      run: gradlew generate-all compile_native
+      run: gradlew.bat generate-all compile_native
     - if: matrix.os != 'windows-latest'
       name: Build natives
       run: ./gradlew generate-all compile_native
