enable back native tests for linux

--- a/build.xml
+++ b/build.xml
@@ -447,7 +447,7 @@
 		<copy todir="${lwjgl.lib}/linux">
 			<fileset dir="${lwjgl.bin}/lwjgl" includes="liblwjgl*.so"/>
 		</copy>
-		<!-- headless issues <version-check platform="linux"/> -->
+		<version-check platform="linux"/>
 	</target>
 
 	<!-- Compiles LWJGL on FreeBSD platforms -->
