--- a/build.gradle
+++ b/build.gradle
@@ -48,3 +48,7 @@ tasks.register('clean-native', Delete) {
 }
 
 tasks.clean.dependsOn("clean-java", "clean-native")
+
+tasks["a-maven-full"].doFirst {
+    clean-java
+}
