--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ tasks.register('clean-native', Delete) {
 
 tasks.clean.dependsOn("clean-java", "clean-native")
 
-tasks["a-maven-full"].doFirst {
-    clean-java
+"a-maven-full" {
+    doFirst {
+        dependsOn("clean-java")
+    }
 }
