--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -30,10 +30,10 @@ jobs:
           arch: ${{ matrix.arch }}
     - if: matrix.os == 'windows-latest'
       name: Build natives
-      run: .\gradlew.bat a-generate-all a-compile_native --info --stacktrace
+      run: .\gradlew.bat a-generate-all compile_native --info --stacktrace
     - if: matrix.os != 'windows-latest'
       name: Build natives
-      run: ./gradlew a-generate-all a-compile_native --info --stacktrace
+      run: ./gradlew a-generate-all compile_native --info --stacktrace
     - if: ${{ failure() }}
       uses: mxschmitt/action-tmate@v3
       with:
