--- a/build.xml
+++ b/build.xml
@@ -113,55 +113,6 @@
 		</move>
 	</target>
 
-	<!-- Packages the java files -->
-	<target name="-createdebugjars">
-		<!-- Create lwjgl.jar -->
-		<jar destfile="${lwjgl.temp}/jar/lwjgl-debug.jar" taskname="lwjgl-debug.jar">
-			<fileset refid="lwjgl.fileset" />
-			<fileset refid="lwjgl.fileset.dependencies"/>
-			<manifest>
-				<attribute name="Sealed" value="true"/>
-			</manifest>
-		</jar>
-	</target>
-
-	<!-- Packages the java files -->
-	<target name="-createjars">
-		<!-- Create lwjgl.jar -->
-		<jar destfile="${lwjgl.temp}/jar/lwjgl.jar" taskname="lwjgl.jar">
-			<fileset refid="lwjgl.fileset" />
-			<fileset refid="lwjgl.fileset.dependencies"/>
-			<manifest>
-				<attribute name="Sealed" value="true"/>
-			</manifest>
-		</jar>
-
-		<!-- Create lwjgl_util_applet.jar -->
-		<jar destfile="${lwjgl.temp}/jar/lwjgl_util_applet.jar" taskname="lwjgl_util_applet.jar">
-			<fileset dir="${lwjgl.res}" includes="applet*"/>
-			<fileset refid="lwjgl_util_applet.fileset" />
-			<manifest>
-				<attribute name="Sealed" value="true"/>
-				<attribute name="Trusted-Library" value="true"/>
-				<attribute name="Permissions" value="all-permissions"/>
-				<attribute name="Codebase" value="*"/>
-				<attribute name="Caller-Allowable-Codebase" value="*"/>
-				<attribute name="Application-Library-Allowable-Codebase" value="*"/>
-			</manifest>
-		</jar>
-
-		<!-- Create lwjgl_test.jar -->
-		<jar destfile="${lwjgl.temp}/jar/lwjgl_test.jar" taskname="lwjgl_test.jar">
-			<fileset refid="lwjgl_test.fileset" />
-			<fileset refid="lwjgl_test_extra.fileset" />
-		</jar>
-
-		<!-- Create lwjgl_util.jar -->
-		<jar destfile="${lwjgl.temp}/jar/lwjgl_util.jar" taskname="lwjgl_util.jar">
-			<fileset refid="lwjgl_util.fileset" />
-		</jar>
-	</target>
-
 	<!-- Packages the java files for the ES build -->
 	<target name="-createjars_es">
 		<!-- ================================================================== -->
@@ -363,59 +314,8 @@
 		</sequential>
 	</macrodef>
 
-	<!-- Compiles the Java source code -->
-	<target name="compile" description="Compiles the java source code" depends="-initialize">
-		<javac debug="yes" destdir="${lwjgl.bin}" source="1.8" target="1.8" classpath="${lwjgl.lib}/jinput.jar:${lwjgl.lib}/AppleJavaExtensions.jar:${lwjgl.lib}/asm-debug-all.jar" taskname="core" nativeHeaderDir="${lwjgl.src.native}">
-            <!--<compilerarg value="-Xlint:unchecked"/>-->
-			<src path="${lwjgl.src}/java/"/>
-			<src path="${lwjgl.src}/generated/"/>
-			<include name="org/lwjgl/*.java"/>
-			<include name="org/lwjgl/input/**"/>
-			<include name="org/lwjgl/opengl/**"/>
-			<include name="org/lwjgl/opengles/**"/>
-			<include name="org/lwjgl/openal/**"/>
-            <include name="org/lwjgl/opencl/**"/>
-			<include name="org/lwjgl/util/**"/>
-			<exclude name="org/lwjgl/util/generator/**"/>
-		</javac>
-		<javac debug="yes" srcdir="${lwjgl.src}/java/" destdir="${lwjgl.bin}" includes="org/lwjgl/test/**" source="1.8" target="1.8" taskname="test" />
-		<javac debug="yes" srcdir="${lwjgl.src}/java/" destdir="${lwjgl.bin}" includes="org/lwjgl/examples/**" source="1.8" target="1.8" taskname="examples" />
-	</target>
-
-	<target name="compile_native" depends="-initialize, compile, touch-version, version-mismatch" description="Compiles the native files">
-		<condition property="lwjgl.platform.windows">
-			<os family="windows" />
-		</condition>
-		<antcall target="-compile_native_win32" />
-
-		<condition property="lwjgl.platform.linux">
-			<os name="Linux" />
-		</condition>
-		<antcall target="-compile_native_linux" />
-
-		<condition property="lwjgl.platform.freebsd">
-			<os name="FreeBSD" />
-		</condition>
-		<antcall target="-compile_native_freebsd" />
-
-		<condition property="lwjgl.platform.openbsd">
-			<os name="OpenBSD" />
-		</condition>
-		<antcall target="-compile_native_openbsd" />
-
-		<condition property="lwjgl.platform.solaris">
-			<os name="SunOS" />
-		</condition>
-		<antcall target="-compile_native_solaris" />
-
-		<condition property="lwjgl.platform.macosx">
-			<os name="Mac OS X" />
-		</condition>
-		<antcall target="-compile_native_macosx" />
-	</target>
-
 	<!-- Compiles LWJGL on Win32 platforms  -->
-	<target name="-compile_native_win32" if="lwjgl.platform.windows">
+	<target name="-compile_native_win32">
 		<ant antfile="platform_build/windows_ant/build.xml" inheritAll="false"/>
 		<copy todir="${lwjgl.lib}/windows">
 			<fileset dir="${lwjgl.bin}/lwjgl" includes="lwjgl*.dll"/>
@@ -424,7 +324,7 @@
 	</target>
 
 	<!-- Compiles LWJGL on Linux platforms -->
-	<target name="-compile_native_linux" if="lwjgl.platform.linux">
+	<target name="-compile_native_linux">
 		<ant antfile="platform_build/linux_ant/build.xml" inheritAll="false"/>
 		<copy todir="${lwjgl.lib}/linux">
 			<fileset dir="${lwjgl.bin}/lwjgl" includes="liblwjgl*.so"/>
@@ -433,7 +333,7 @@
 	</target>
 
 	<!-- Compiles LWJGL on FreeBSD platforms -->
-	<target name="-compile_native_freebsd" if="lwjgl.platform.freebsd">
+	<target name="-compile_native_freebsd">
 		<ant antfile="platform_build/bsd_ant/build.xml" inheritAll="false"/>
 		<copy todir="${lwjgl.lib}/freebsd">
 			<fileset dir="${lwjgl.bin}/lwjgl" includes="liblwjgl*.so"/>
@@ -441,7 +341,7 @@
 	</target>
 
 	<!-- Compiles LWJGL on OpenBSD platforms -->
-	<target name="-compile_native_openbsd" if="lwjgl.platform.openbsd">
+	<target name="-compile_native_openbsd">
 		<ant antfile="platform_build/bsd_ant/build.xml" inheritAll="false"/>
 		<copy todir="${lwjgl.lib}/openbsd">
 			<fileset dir="${lwjgl.bin}/lwjgl" includes="liblwjgl*.so"/>
@@ -450,7 +350,7 @@
 
 
 	<!-- Compiles LWJGL on solaris platforms -->
-	<target name="-compile_native_solaris" if="lwjgl.platform.solaris">
+	<target name="-compile_native_solaris">
 		<!-- Reusing the linux ant task, but copy the output to solaris -->
 		<ant antfile="platform_build/linux_ant/build.xml" inheritAll="false"/>
 		<copy todir="${lwjgl.lib}/solaris">
@@ -460,7 +360,7 @@
 	</target>
 
 	<!-- Compiles LWJGL on Mac platforms -->
-	<target name="-compile_native_macosx" if="lwjgl.platform.macosx">
+	<target name="-compile_native_macosx">
 		<ant antfile="platform_build/macosx_ant/build.xml" inheritAll="false"/>
 		<copy todir="${lwjgl.lib}/macosx">
 			<fileset dir="${lwjgl.bin}/lwjgl" includes="liblwjgl*.dylib"/>
