--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -6,7 +6,7 @@ jobs:
   build-natives:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-20.04, windows-latest, macos-latest]
         arch: [x64, x86]
         exclude:
           - os: macos-latest
@@ -14,15 +14,22 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 8
+    - name: Set up ${{ matrix.arch }} JDK 8
       uses: actions/setup-java@v3
       with:
         java-version: 8
         distribution: zulu
         architecture: ${{ matrix.arch }}
-    - if: matrix.os == 'ubuntu-latest' && matrix.arch == 'x64'
+    - if: matrix.os != 'windows-latest'
+      name: Set up x64 JDK 8
+      uses: actions/setup-java@v3
+      with:
+        java-version: 8
+        distribution: zulu
+        architecture: x64
+    - if: matrix.os == 'ubuntu-20.04' && matrix.arch == 'x64'
       run: sudo apt install libx11-dev libxrandr-dev libxext-dev libxcursor-dev libxxf86vm-dev
-    - if: matrix.os == 'ubuntu-latest' && matrix.arch == 'x86'
+    - if: matrix.os == 'ubuntu-20.04' && matrix.arch == 'x86'
       run: sudo dpkg --add-architecture i386 && sudo apt update && sudo apt install gcc-multilib libx11-dev:i386 libxrandr-dev:i386 libxext-dev:i386 libxcursor-dev:i386 libxxf86vm-dev:i386
     - if: matrix.os == 'windows-latest'
       uses: ilammy/msvc-dev-cmd@v1
@@ -30,14 +37,12 @@ jobs:
           arch: ${{ matrix.arch }}
     - if: matrix.os == 'windows-latest'
       name: Build natives
-      run: .\gradlew.bat a-generate-all compile_native --info --stacktrace
+      run: .\gradlew.bat generate-all compile_native --info --stacktrace
     - if: matrix.os != 'windows-latest'
       name: Build natives
-      run: ./gradlew a-generate-all compile_native --info --stacktrace
-    - if: ${{ failure() }}
-      uses: mxschmitt/action-tmate@v3
-      with:
-        limit-access-to-actor: true
+      run: ./gradlew generate-all compile_native --info --stacktrace
+      env:
+        ARCHITECTURE: ${{ matrix.arch }}
     - uses: actions/upload-artifact@v3
       with:
         name: natives
