--- a/platform_build/linux_ant/build.xml
+++ b/platform_build/linux_ant/build.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0"?>
 
 <project name="lwjgl native code, linux" basedir="../../bin/lwjgl" default="compile">
+	<property environment="env" />
 	<property name="native" location="../../src/native"/>
 	<property name="libname32" value="liblwjgl.so"/>
 	<property name="libname64" value="liblwjgl64.so"/>
-	<property name="libs32" value="-L/usr/X11R6/lib -L/usr/X11/lib -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java.home}/lib -L${java.home}/lib/i386 -ljawt" />
-	<property name="libs64" value="-L/usr/X11R6/lib64 -L/usr/X11/lib64 -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java.home}/lib -L${java.home}/lib/amd64 -ljawt" />
+
+	<condition property="java_home" value="${env.JAVA_HOME}/../${env.ARCHITECTURE}/jre">
+		<isset property="env.ARCHITECTURE"/>
+	</condition>
+	<condition property="java_home" value="${java.home}">
+		<not>
+			<isset property="env.ARCHITECTURE"/>
+		</not>
+	</condition>
+
+	<property name="libs32" value="-L/usr/X11R6/lib -L/usr/X11/lib -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java_home}/lib -L${java_home}/lib/i386 -ljawt" />
+	<property name="libs64" value="-L/usr/X11R6/lib64 -L/usr/X11/lib64 -lm -lX11 -lXext -lXcursor -lXrandr -lXxf86vm -lpthread -L${java_home}/lib -L${java_home}/lib/amd64 -ljawt" />
 	<property name="cflags32" value="-O2 -Wall -c -fPIC -std=c99 -Wunused"/>
 
 	<target name="clean">
@@ -40,12 +51,30 @@
 		<property name="linker_flags64" value="${version_script_flags64} -shared -O2 -Wall -o ${libname64} ${libs64}"/>
 
     	<condition property="build.32bit.only">
-			<equals arg1="${os.arch}" arg2="i386"/>
+			<or>
+				<and>
+					<equals arg1="${os.arch}" arg2="i386"/>
+					<not><isset property="env.ARCHITECTURE"/></not>
+				</and>
+				<and>
+					<isset property="env.ARCHITECTURE"/>
+					<equals arg1="${env.ARCHITECTURE}" arg2="x86"/>
+				</and>
+			</or>
     	</condition>
 
     	<!-- On linux, the 64 bit jre doesn't have the 32 bit libs -->
     	<condition property="build.64bit.only">
-			<equals arg1="${os.arch}" arg2="amd64"/>
+			<or>
+				<and>
+					<equals arg1="${os.arch}" arg2="amd64"/>
+					<not><isset property="env.ARCHITECTURE"/></not>
+				</and>
+				<and>
+					<isset property="env.ARCHITECTURE"/>
+					<equals arg1="${env.ARCHITECTURE}" arg2="x64"/>
+				</and>
+			</or>
     	</condition>
 
     	<antcall target="compile32"/>
@@ -56,11 +85,11 @@
     	<mkdir dir="x32"/>
     	<apply dir="x32" executable="gcc" skipemptyfilesets="true" failonerror="true" parallel="true">
 			<arg line="-m32 ${cflags32} ${cflags_pthread}"/>
-			<arg value="-I${java.home}/include"/>
-			<arg value="-I${java.home}/include/linux"/>
-			<arg value="-I${java.home}/../include"/>
-			<arg value="-I${java.home}/../include/linux"/>
-			<arg value="-I${java.home}/../include/solaris"/>
+			<arg value="-I${java_home}/include"/>
+			<arg value="-I${java_home}/include/linux"/>
+			<arg value="-I${java_home}/../include"/>
+			<arg value="-I${java_home}/../include/linux"/>
+			<arg value="-I${java_home}/../include/solaris"/>
 			<arg value="-I${native}"/>
 			<arg value="-I${native}/common"/>
 		    <arg value="-I${native}/common/opengl"/>
@@ -89,11 +118,11 @@
     	<mkdir dir="x64"/>
     	<apply dir="x64" executable="gcc" skipemptyfilesets="true" failonerror="true" parallel="true">
 			<arg line="${cflags64} ${cflags_pthread}"/>
-			<arg value="-I${java.home}/include"/>
-			<arg value="-I${java.home}/include/linux"/>
-			<arg value="-I${java.home}/../include"/>
-			<arg value="-I${java.home}/../include/linux"/>
-			<arg value="-I${java.home}/../include/solaris"/>
+			<arg value="-I${java_home}/include"/>
+			<arg value="-I${java_home}/include/linux"/>
+			<arg value="-I${java_home}/../include"/>
+			<arg value="-I${java_home}/../include/linux"/>
+			<arg value="-I${java_home}/../include/solaris"/>
 			<arg value="-I${native}"/>
 			<arg value="-I${native}/common"/>
 		    <arg value="-I${native}/common/opengl"/>
