--- a/gradle/maven.gradle
+++ b/gradle/maven.gradle
@@ -26,26 +26,25 @@ tasks.register("copymavenpoms", Copy) {
 }
 
 for (final def os in ["windows", "linux", "osx"]) {
-    tasks.register("createmavennativejars_${os}", Jar) {
-        it.description = "lwjgl-platform-natives-${os}.jar"
+    tasks.register("createmavennativejars_${os}", Jar) {et ->
+        et.description = "lwjgl-platform-natives-${os}.jar"
 
-        it.dependsOn "compile"
+        et.dependsOn "compile"
 
         def praps = proparties["lwjgl-${os.replace("osx", "macosx")}-lwjgl.fileset"]
 
-        it.from("${proparties['lwjgl.lib']}/${os}") {tr->
-
+        et.from("${proparties['lwjgl.lib']}/${os}") {tr->
             praps.includes.forEach {aa -> tr.include aa}
             praps.excludes.forEach {aa -> tr.exclude aa}
         }
 
-        it.from("${proparties['lwjgl.bin'].toString()}/lwjgl") {tr->
+        et.from("${proparties['lwjgl.bin'].toString()}/lwjgl") {tr->
             praps.includes.forEach {aa -> tr.include aa}
             praps.excludes.forEach {aa -> tr.exclude aa}
         }
 
-        it.destinationDirectory = proparties['lwjgl.dstMaven']
-        it.archiveFileName = "lwjgl-platform-natives-${os}.jar"
+        et.destinationDirectory = proparties['lwjgl.dstMaven']
+        et.archiveFileName = "lwjgl-platform-natives-${os}.jar"
     }
 }
 
@@ -235,10 +234,9 @@ tasks.register("createmavenjavadocs") {
 tasks.register("copymaventdist", Zip) {
     dependsOn "copylwjgljars", "createmavensourcejars", "createmavenjavadocs", "createmavennativejars", "copymavenpoms"
 
-//    from(proparties["lwjgl.temp"]) {
-//        include "maven/**"
-//    }
-    from proparties['lwjgl.dstMaven']
+    from(proparties["lwjgl.temp"]) {
+        include "maven/**"
+    }
 
     destinationDirectory = file("./dist")
     archiveFileName = "lwjgl-maven-${proparties['lwjgl.version']}.zip"
